colorblock comp spacing fixed

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1720,7 +1720,6 @@ footer .social-icons img {
    }
    .image-6040 {
       width: 60%;
-      padding: var(--space-small);
    }
 }
 
