--- a/resources/css/test.css
+++ b/resources/css/test.css
@@ -25,6 +25,12 @@
 }
 
 
+.color-block-comp.sinque {
+   margin-top: var(--space-medium);
+   margin-bottom: 0;
+}
+
+
 /* custom breakpoint medium + a bit */
 @media (min-width: 900px) {
    .comp-content video {
@@ -41,6 +47,11 @@
    .comp-content {
       max-width: 1100px; /*prevents text running too long — the resulting comp is centered*/
    }
+
+   .color-block-comp.sinque {
+      margin-top: var(--space-large);
+      margin-bottom: 0;
+   }
 }
 
 /* region large */
@@ -53,5 +64,10 @@
       margin-top: 21rem;
       padding-left: var(--space-larger);
       padding-right: 0;
+   }
+
+   .color-block-comp.sinque {
+      margin-top: var(--space-larger);
+      margin-bottom: calc(var(--space-medium)*-1);
    }
 }
